--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">UniArtsApp</string>
+
+    <string name="app_net_error_timeout">连接超时，请稍后再试！</string>
+    <string name="app_net_error_connect">连接失败，请稍后再试！</string>
+    <string name="app_net_error_failed">网络故障，请稍后再试！</string>
 </resources>
